Added the ALL UNNAMED java option when running server as daemon background process. Also added the option in gitlab.ci.yml
(cherry picked from commit 464550028d353e49c01e673fc7cc0f581eeacce8)